--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sseqv</title>
+  <title>SSEQV</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo.ico">
 
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.3/css/uikit.min.css" />
