anexo em publicacoes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Sistema para Socialização do Conhecimento sobre Qualidade de Vida</title>
+  <title>Sistema de Socialização em Qualidade de Vida</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
