--- a/src/assets/pages/demo-sseqv/index.html
+++ b/src/assets/pages/demo-sseqv/index.html
@@ -21,7 +21,7 @@
 	<!-- Sidebar -->
 	<section id="sidebar">
 		<div class="inner">
-			<img id="logo-sseqv" width="200" src="../../img/logo-sseqv.png">
+			<img id="logo-sseqv" width="200" src="../../video/sseqv.gif">
 			<nav>
 				<ul>
 					<li><a href="#intro">Bem-vindo</a></li>
@@ -41,11 +41,10 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1 id="titulo">Sinopse</h1>
 				<p>Visão geral do Protótipo de um sistema para captação, avaliação, armazenamento e disponibilização de
 					estudos sobre qualidade de vida, devidamente indexados, com o propósito de facilitar a localização
 					dos mesmos pelas partes interessadas na incorporação de tecnologias no âmbito do SUS.</p>
-				<h2 id="titulo">Academic and Scientific Healthcare Search</h2>
+				<p id="titulo">Academic and Scientific Healthcare Search</p>
 				<form>
 					<div class="fields">
 						<input id="input-search" type="text" placeholder="Busque aqui" />
@@ -53,8 +52,8 @@
 					</div>
 				</form>
 				<ul class="actions">
-					<li><a href="#sobre" class="button primary scrolly">Entenda a Plataforma</a></li>
-					<li><a href="http://sseqv.institutoapoema.org/#/home" target="_blank" class="button">Sobre o
+					<li><a class="button primary scrolly" href="http://sseqv.institutoapoema.org/#/sobre"
+							target="_blank" class="button">Sobre o
 							SSEQV</a></li>
 				</ul>
 			</div>
@@ -64,10 +63,12 @@
 		<section id="avancada" class="wrapper style2 fade-up">
 			<div class="inner">
 				<h1>Busca Avançada</h1>
-				<button id="cat1" class="categoria categoria-active" onclick="active('cat1')">Bases Acadêmicas</button>
-				<button id="cat2" class="categoria" onclick="active('cat2')">Bases Científicas</button>
-				<button id="cat3" class="categoria" onclick="active('cat3')">Bases Acadêmicas e Científicas</button>
-				<button id="cat4" class="categoria" onclick="active('cat4')">Diretrizes Metodológicas</button>
+				<button id="cat-ba" class="categoria categoria-active" onclick="active('cat-ba')">Bases
+					Acadêmicas</button>
+				<button id="cat-bc" class="categoria" onclick="active('cat-bc')">Bases Científicas</button>
+				<button id="cat-babc" class="categoria" onclick="active('cat-babc')">Bases Acadêmicas e
+					Científicas</button>
+				<button id="cat-dir" class="categoria" onclick="active('cat-dir')">Diretrizes Metodológicas</button>
 				<div class="features">
 					<section>
 						<form method="post" action="#">
@@ -112,38 +113,43 @@
 										<option value="1">Instituição 2</option>
 									</select>
 								</div>
-								<div class="col-12">
-									<label>Tipos de estudo em ATS</label>
+								<div id="diretrizes" style="display: none">
+									<div class="col-12">
+										<label>Tipos de estudo em ATS</label>
+										<!-- opções -->
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">parecer técnico-científco (PTC) e nota técnica de
+											revisão
+											rápida (NTRR)</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">revisão sistemática</label>
+										<br>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">revisão de revisões sistemáticas (RRS)</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">análise econômica em saúde (AES) e análise de impacto
+											orçamentário (AIO)</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">avaliação e adaptação de diretrizes clínicas</label>
+									</div>
+									<div class="col-12"><label>Cenários de aplicação</label></div>
 									<!-- opções -->
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">parecer técnico-científco (PTC) e nota técnica de revisão
-										rápida (NTRR)</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">revisão sistemática</label>
-									<br>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">revisão de revisões sistemáticas (RRS)</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">análise econômica em saúde (AES) e análise de impacto
-										orçamentário (AIO)</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">avaliação e adaptação de diretrizes clínicas</label>
-								</div>
-								<div class="col-5">
-									<label>Cenários de aplicação</label>
-									<!-- opções -->
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">promoção de saúde</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">prevenção de doenças</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">redução de danos</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">diagnóstico e tratamento</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">reabilitação</label>
-									<input type="checkbox" id="demo-human" name="demo-human">
-									<label for="demo-human">cuidados paliativos</label>
+									<div class="col-6">
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">promoção de saúde</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">prevenção de doenças</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">redução de danos</label>
+									</div>
+									<div class="col-6">
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">diagnóstico e tratamento</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">reabilitação</label>
+										<input type="checkbox" id="demo-human" name="demo-human">
+										<label for="demo-human">cuidados paliativos</label>
+									</div>
 								</div>
 								<div class="col-12">
 									<ul class="actions">
