--- a/src/assets/pages/demo-sseqv/index.html
+++ b/src/assets/pages/demo-sseqv/index.html
@@ -117,38 +117,38 @@
 									<div class="col-12">
 										<label>Tipos de estudo em ATS</label>
 										<!-- opções -->
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">parecer técnico-científco (PTC) e nota técnica de
+										<input type="checkbox" id="perecer" name="perecer">
+										<label for="perecer">parecer técnico-científco (PTC) e nota técnica de
 											revisão
 											rápida (NTRR)</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">revisão sistemática</label>
+										<input type="checkbox" id="rev-sis" name="rev-sis">
+										<label for="rev-sis">revisão sistemática</label>
 										<br>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">revisão de revisões sistemáticas (RRS)</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">análise econômica em saúde (AES) e análise de impacto
+										<input type="checkbox" id="rev-rev" name="rev-rev">
+										<label for="rev-rev">revisão de revisões sistemáticas (RRS)</label>
+										<input type="checkbox" id="analise" name="analise">
+										<label for="analise">análise econômica em saúde (AES) e análise de impacto
 											orçamentário (AIO)</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">avaliação e adaptação de diretrizes clínicas</label>
+										<input type="checkbox" id="ava" name="ava">
+										<label for="ava">avaliação e adaptação de diretrizes clínicas</label>
 									</div>
 									<div class="col-12"><label>Cenários de aplicação</label></div>
 									<!-- opções -->
 									<div class="col-6">
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">promoção de saúde</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">prevenção de doenças</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">redução de danos</label>
+										<input type="checkbox" id="promocao" name="promocao">
+										<label for="promocao">promoção de saúde</label>
+										<input type="checkbox" id="prevencao" name="prevencao">
+										<label for="prevencao">prevenção de doenças</label>
+										<input type="checkbox" id="reducao" name="reducao">
+										<label for="reducao">redução de danos</label>
 									</div>
 									<div class="col-6">
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">diagnóstico e tratamento</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">reabilitação</label>
-										<input type="checkbox" id="demo-human" name="demo-human">
-										<label for="demo-human">cuidados paliativos</label>
+										<input type="checkbox" id="diag" name="diag">
+										<label for="diag">diagnóstico e tratamento</label>
+										<input type="checkbox" id="reabilitacao" name="reabilitacao">
+										<label for="reabilitacao">reabilitação</label>
+										<input type="checkbox" id="cuidados" name="cuidados">
+										<label for="cuidados">cuidados paliativos</label>
 									</div>
 								</div>
 								<div class="col-12">
